boot(task102): micro-batch CONFIRMATION NULL — §18 bank-candidate DEMOTED (n=5 pairs pooled -0.096s sign-unstable; gate failed +0.426 wrong-direction); variance floor revised to ~1.5s + new gate law n>=3 pairs; treatment delivery proven (6/6 markers); rig fixes: task-specific lock labels + two-space region grep; NO wiring, prod v2 unchanged; ledger §19